--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
     "symfony/phpunit-bridge": "^6.1",
     "terminal42/contao-build-tools": "dev-main"
   },
+  "suggest": {
+    "inspiredminds/contao-event-registration": "For registration to events use this bundle."
+  },
   "autoload": {
     "psr-4": {
       "Cgoit\\CalendarExtendedBundle\\": "src/"
