--- a/config/di.yml
+++ b/config/di.yml
@@ -4,8 +4,24 @@ services:
         autowire: true
         public: false
         bind:
+            $db: '@database_connection'
             $requestStack: '@request_stack'
+            $securityHelper: '@security.helper'
             $maxRepeatCount: '%cgoit_calendar_extended.max_repeat_count%'
+            $maxExceptionsCount: '%cgoit_calendar_extended.exceptions.max_count%'
+            $exceptionsMoveDays: '%cgoit_calendar_extended.exceptions.move_days%'
+            $exceptionsMoveTimes: '%cgoit_calendar_extended.exceptions.move_times%'
+            $arrMonth: '%cgoit_calendar_extended.month_array%'
+            $arrDay: '%cgoit_calendar_extended.day_array%'
+            $arrFilterFields: '%cgoit_calendar_extended.filter_fields%'
 
     Cgoit\CalendarExtendedBundle\:
         resource: ../src/*
+
+    calendar_extended.mcw.callbacks:
+        class: Cgoit\CalendarExtendedBundle\EventListener\DataContainer\CalendarEventsMCWCallbacks
+        public: true
+
+    calendar_extended.module.callbacks:
+        class: Cgoit\CalendarExtendedBundle\EventListener\DataContainer\ModuleCallbacks
+        public: true
