--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,8 @@
     "php": "^8.1 || ^8.2 || ^8.3",
     "contao/core-bundle": "^4.13",
     "contao/calendar-bundle": "^4.13",
+    "symfony/routing": "^5.4 || ^6.4",
+    "symfony/http-foundation": "^5.4 || ^6.4",
     "menatwork/contao-multicolumnwizard-bundle": "^3.6"
   },
   "require-dev": {
