chore: add shadow dependencies

--- a/composer.json
+++ b/composer.json
@@ -73,9 +73,7 @@
   "scripts": {
     "all": [
       "@unit-tests",
-      "@cs-fixer",
-      "@rector",
-      "@phpstan"
+      "@build-tools"
     ],
     "unit-tests": "@php vendor/bin/phpunit --colors=always"
   }
