--- a/composer.json
+++ b/composer.json
@@ -29,24 +29,26 @@
   },
   "require": {
     "php": "^8.1 || ^8.2 || ^8.3",
-    "contao/core-bundle": "^4.13",
-    "contao/calendar-bundle": "^4.13",
-    "symfony/routing": "^5.4 || ^6.4",
-    "symfony/http-foundation": "^5.4 || ^6.4",
-    "symfony/config": "^5.4 || ^6.4",
-    "symfony/dependency-injection": "^5.4 || ^6.4",
-    "symfony/http-kernel": "^5.4 || ^6.4",
+    "contao/calendar-bundle": "^4.13 || ^5.3",
+    "symfony/routing": "^5.4 || ^6.0",
+    "symfony/http-foundation": "^5.4 || ^6.0",
+    "symfony/config": "^5.4 || ^6.0",
+    "symfony/dependency-injection": "^5.4 || ^6.0",
+    "symfony/http-kernel": "^5.4 || ^6.0",
     "doctrine/dbal": "^3.3",
     "menatwork/contao-multicolumnwizard-bundle": "^3.6"
   },
   "require-dev": {
     "contao/manager-plugin": "^2.0",
     "phpunit/phpunit": "^10.3",
-    "symfony/phpunit-bridge": "^6.1",
+    "symfony/phpunit-bridge": "^7.0",
     "terminal42/contao-build-tools": "dev-main"
   },
   "suggest": {
     "inspiredminds/contao-event-registration": "For registration to events use this bundle."
+  },
+  "conflict": {
+    "contao/manager-plugin": "<2.0 || >=3.0"
   },
   "autoload": {
     "psr-4": {
