--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
   },
   "require": {
     "php": "^8.1 || ^8.2 || ^8.3",
+    "contao/core-bundle": "^4.13 || ^5.3",
     "contao/calendar-bundle": "^4.13 || ^5.3",
     "symfony/routing": "^5.4 || ^6.0",
     "symfony/http-foundation": "^5.4 || ^6.0",
@@ -75,7 +76,10 @@
   "scripts": {
     "all": [
       "@unit-tests",
-      "@build-tools"
+      "@cs-fixer",
+      "@rector",
+      "@phpstan",
+      "@depcheck"
     ],
     "unit-tests": "@php vendor/bin/phpunit --colors=always"
   }
