fix: fix processing of fixed dates repeats

--- a/config/services.yml
+++ b/config/services.yml
@@ -30,3 +30,7 @@ services:
     Cgoit\CalendarExtendedBundle\Migration\CopyHolidayCalendarsMigration:
         tags:
             - { name: contao.migration }
+
+    Cgoit\CalendarExtendedBundle\Migration\FixRepeatFixedDatesMigration:
+        tags:
+            - { name: contao.migration }
