--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
   },
   "require": {
     "php": "^8.1 || ^8.2 || ^8.3",
+    "ext-mbstring": "*",
     "contao/core-bundle": "^4.13 || ^5.3",
     "contao/calendar-bundle": "^4.13 || ^5.3",
     "symfony/routing": "^5.4 || ^6.0",
