--- a/composer.json
+++ b/composer.json
@@ -28,16 +28,16 @@
     "source": "https://github.com/cgoIT/calendar-extended-bundle"
   },
   "require": {
-    "php": "^8.1 || ^8.2 || ^8.3",
+    "php": "^8.2",
     "ext-mbstring": "*",
     "contao/core-bundle": "^4.13 || ^5.3",
     "contao/calendar-bundle": "^4.13 || ^5.3",
-    "symfony/routing": "^5.4 || ^6.0",
-    "symfony/http-foundation": "^5.4 || ^6.0",
-    "symfony/config": "^5.4 || ^6.0",
-    "symfony/dependency-injection": "^5.4 || ^6.0",
-    "symfony/http-kernel": "^5.4 || ^6.0",
-    "doctrine/dbal": "^3.3",
+    "symfony/routing": "^5.4 || ^6.0 || ^7.3",
+    "symfony/http-foundation": "^5.4 || ^6.0 || ^7.3",
+    "symfony/config": "^5.4 || ^6.0 || ^7.3",
+    "symfony/dependency-injection": "^5.4 || ^6.0 || ^7.3",
+    "symfony/http-kernel": "^5.4 || ^6.0 || ^7.3",
+    "doctrine/dbal": "^3.3 || ^4.0",
     "menatwork/contao-multicolumnwizard-bundle": "^3.6"
   },
   "require-dev": {
