--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,14 @@ on:
 permissions: read-all
 
 jobs:
-    ecs:
+    ci:
         name: build-tools
         runs-on: ubuntu-latest
         steps:
             -   name: Setup PHP
                 uses: shivammathur/setup-php@v2
                 with:
-                    php-version: 8.2 # Run with the lowest supported to avoid incompatible fixes
+                    php-version: 8.3
                     extensions: dom, fileinfo, filter, gd, hash, intl, json, mbstring, mysqli, pcre, pdo_mysql, zlib
                     coverage: none
                 env:
