fix: make constructor final public in ParseFrontendTemplateHook.php

--- a/composer.json
+++ b/composer.json
@@ -67,5 +67,13 @@
   },
   "extra": {
     "contao-manager-plugin": "Cgoit\\CalendarExtendedBundle\\ContaoManager\\Plugin"
+  },
+  "scripts": {
+    "all": [
+      "@ecs",
+      "@rector",
+      "@phpstan",
+      "@depcheck"
+    ]
   }
 }
